[gd_scene load_steps=10 format=3 uid="uid://ctpcp4jhcv4be"]

[ext_resource type="FontFile" uid="uid://bnl2tsb2chuqu" path="res://addons/google_fonts/VT323/VT323-Regular.ttf" id="1_ta2k2"]
[ext_resource type="Script" uid="uid://bwnknk0sw1yh2" path="res://scripts/ui/options_menu.gd" id="1_wj2x4"]
[ext_resource type="StyleBox" uid="uid://blmwwx6k4soi" path="res://assets/styleBoxes/alien_message_box.tres" id="2_imaij"]
[ext_resource type="FontFile" uid="uid://bediy5b4ickqs" path="res://addons/google_fonts/VT323/default_font.tres" id="3_hb1yv"]
[ext_resource type="StyleBox" uid="uid://di8fh5njrd5bo" path="res://assets/styleBoxes/default_hover_button.tres" id="5_ovlcw"]
[ext_resource type="StyleBox" uid="uid://yinxxw3gnl2s" path="res://assets/styleBoxes/default_pressed_button.tres" id="6_gff41"]
[ext_resource type="StyleBox" uid="uid://bsettx4eyj8yt" path="res://assets/styleBoxes/default_button.tres" id="7_dqh3v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wj2x4"]
bg_color = Color(0, 0, 0, 0.470588)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2046m"]
bg_color = Color(0.992157, 0.964706, 0.890196, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="OptionsMenu" type="CanvasLayer"]
layer = 5
script = ExtResource("1_wj2x4")

[node name="Container" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wj2x4")

[node name="OptionCluster" type="Panel" parent="Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -60.0
offset_right = 180.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_imaij")

[node name="VolumeContainer" type="Control" parent="Container/OptionCluster"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -130.0
offset_top = 12.0
offset_right = 130.0
offset_bottom = 52.0
grow_horizontal = 2

[node name="Label" type="RichTextLabel" parent="Container/OptionCluster/VolumeContainer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -12.0
offset_right = 72.0
offset_bottom = 13.0
grow_vertical = 2
theme_override_colors/default_color = Color(0.992157, 0.964706, 0.890196, 1)
theme_override_fonts/normal_font = ExtResource("3_hb1yv")
theme_override_font_sizes/normal_font_size = 23
text = "Volume"
scroll_active = false
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="Container/OptionCluster/VolumeContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_2046m")
max_value = 1.0
step = 0.001
value = 0.5

[node name="QuitToMenu" type="Button" parent="Container/OptionCluster"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.5
offset_top = -53.0
offset_right = 80.5
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.992157, 0.964706, 0.890196, 1)
theme_override_fonts/font = ExtResource("1_ta2k2")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = ExtResource("5_ovlcw")
theme_override_styles/pressed = ExtResource("6_gff41")
theme_override_styles/normal = ExtResource("7_dqh3v")
text = "Quit To Menu"

[connection signal="value_changed" from="Container/OptionCluster/VolumeContainer/HSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="Container/OptionCluster/QuitToMenu" to="." method="_on_quit_to_menu_pressed"]
